<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--定义一组单选菜单项-->
    <group android:checkableBehavior="single">
        <!--定义多个菜单项-->
        <item android:title="@string/woman_cloth"
            android:id="@+id/woman_cloth"></item>
        <item
            android:id="@+id/man_cloth"
            android:title="@string/man_cloth"/>
        <item
            android:id="@+id/phone"
            android:title="@string/photo"/>
        <item android:id="@+id/camera"
            android:title="@string/camera"/>
        <item android:id="@+id/computer"
            android:title="@string/computer"/>
        <item android:id="@+id/shoes"
            android:title="@string/shoes"/>
        <item android:id="@+id/makeup"
            android:title="@string/makeup"/>
        <item android:id="@+id/car"
            android:title="@string/car"/>

    </group>
</menu>