<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login"
        android:layout_marginTop="@dimen/button_size"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/button_size">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textStyle="italic"
            android:textSize="@dimen/small_text_size"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="请输入教务处对应账号"
            android:background="@drawable/edittext_bg"
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/send_itemfour_color"
            android:id="@+id/user_id"
            android:layout_marginStart="@dimen/small_text_size"
            android:focusableInTouchMode="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/down"
            android:id="@+id/down"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/button_bg"
        android:id="@+id/divider1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_size">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textSize="@dimen/small_text_size"
            android:textStyle="italic"/>
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="请输入登录密码"
            android:background="@drawable/edittext_bg"
            android:textSize="@dimen/small_text_size"
            android:inputType="numberPassword"
            android:textColor="@color/send_itemfour_color"
            android:id="@+id/password"
            android:layout_marginStart="@dimen/small_text_size"
            android:focusableInTouchMode="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/visible"
            android:id="@+id/visible"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:id="@+id/divider2"/>
    <Button
        android:layout_width="330dp"
        android:layout_height="@dimen/button_size"
        android:text="@string/login"
        android:background="@drawable/button_bg"
        android:textColor="@color/bg_color"
        android:id="@+id/login"
        android:layout_marginTop="@dimen/text_size"
        android:textSize="@dimen/text_size"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/problem"
        android:textColor="@color/button_bg"
        android:layout_marginTop="@dimen/small_text_size"/>
</LinearLayout>

