<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="@color/bottom_color">
        <ImageButton
            android:id="@+id/btn_side_menu"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:src="@drawable/me"
            android:background="@drawable/titlebar_btn_backgruand"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/auction"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <com.example.administrator.study.util.CustomViewPager
        android:id="@+id/viewpager"
        android:layout_below="@id/title_bar"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_above="@+id/bottom"
        android:background="@color/bg_color"/>

    <com.example.administrator.study.util.CustomSideMenu
        android:id="@+id/side_menu_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#00000000">

        <include
            android:id="@+id/sideMain_layout"
            layout="@layout/slidemenu_layout"/>
    </com.example.administrator.study.util.CustomSideMenu>

    <!--底部导航栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom"
        android:background="@color/bottom_color">
        <!--第一个菜单-->
        <RelativeLayout
            android:id="@+id/auction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/auctionImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/auction_selected"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/auctionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auction"
                    android:layout_gravity="left"
                    android:textColor="@color/blue"/>
            </LinearLayout>
        </RelativeLayout>
        <!--第二个菜单-->
        <RelativeLayout
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/messageImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:src="@drawable/sendauction"/>
                <TextView
                    android:id="@+id/messageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
        </RelativeLayout>
        <!--第三个菜单，消息菜单-->
        <RelativeLayout
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/settingImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/message_nomal"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/settingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/color_shadow"
        android:clickable="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>