<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/divider"
        android:id="@+id/topPanel">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/error"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/errorImage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/send"
            android:layout_centerHorizontal="true"
            android:textSize="18dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/warning"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:id="@+id/warnImage"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:actionBarSize"
        android:layout_above="@+id/view3"
        android:background="@color/divider">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/title"
                android:background="@drawable/spinner_bg"
                android:id="@+id/title"
                android:gravity="center_vertical"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_below="@id/title"
                android:id="@+id/view"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view"
                android:background="@color/bg_color"
                android:id="@+id/top">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="100dp"
                    android:id="@+id/send_content"
                    android:layout_alignParentTop="true"
                    android:hint="描述一下你的拍品..."
                    android:textSize="@dimen/small_text_size"
                    android:background="@drawable/spinner_bg"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:gravity="fill_vertical"
                    />
                <GridView
                    android:id="@+id/gridView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="3dp"
                    android:numColumns="4"
                    android:verticalSpacing="@dimen/space_size"
                    android:layout_below="@id/send_content"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/position"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_below="@+id/gridView"
                    android:layout_alignParentEnd="true"
                    android:background="@color/bg_color">
                    <ImageView
                        android:layout_width="@dimen/small_photo_size"
                        android:layout_height="@dimen/small_photo_size"
                        android:background="@drawable/position"
                        android:id="@+id/positionphoto"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/position"
                        android:layout_marginStart="48dp"
                        android:gravity="center_vertical"/>
                </RelativeLayout>
            </RelativeLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_marginTop="@dimen/small_photo_size"
                android:id="@+id/auctionItem"
                android:layout_below="@id/top"
                android:background="@color/bg_color"
                >
            </ListView>
        </RelativeLayout>
    </ScrollView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_above="@+id/button"
        android:id="@+id/view3">
    </View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_color"
        android:gravity="center"
        android:id="@+id/button">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="10dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="10dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="确认发布"
                android:background="@drawable/sure_button_bg"
                android:textColor="@color/bg_color"
                android:gravity="center"
                android:id="@+id/sureButton"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>